--- a/.github/workflows/prova.yml
+++ b/.github/workflows/prova.yml
@@ -10,18 +10,13 @@ on:
     branches: [ "main" ]
 
 jobs:
-  build:
+  test:
 
     runs-on: ubuntu-latest
     container: maven:3.8.6-openjdk-18
 
     steps:
     - uses: actions/checkout@v3
-    - name: Set up JDK 11
-      uses: actions/setup-java@v3
-      with:
-        java-version: '11'
-        distribution: 'temurin'
-        cache: maven
-    - name: Build with Maven
-      run: mvn -B package --file pom.xml
+    
+    - name: run-test
+      run: mvn clean package
